--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.45",
 		"@sveltejs/kit": "next",
+		"@tailwindcss/typography": "^0.5.2",
 		"@types/tailwindcss": "^3.0.8",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
